add dockerfile
